--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.479.0",
+    "mongoose": "^8.12.1",
     "next": "15.2.1",
     "next-themes": "^0.4.5",
     "react": "^19.0.0",
@@ -47,6 +49,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/mongodb": "^4.0.6",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-big-calendar": "^1.16.1",
