--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/moment-timezone": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -37,6 +38,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.479.0",
+    "moment-timezone": "^0.5.48",
     "mongoose": "^8.12.1",
     "next": "15.2.1",
     "next-themes": "^0.4.5",
