--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cron": "^4.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.479.0",
@@ -42,6 +43,7 @@
     "mongoose": "^8.12.1",
     "next": "15.2.1",
     "next-themes": "^0.4.5",
+    "node-cron": "^3.0.3",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
     "react-datepicker": "^8.2.1",
