--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "crons": [
     {
-      "path": "/api/cron/recurring-events",
+      "path": "/api/cron",
       "schedule": "0 0 * * *"
     }
   ]
